ECMS-1619 fixing problem about vertical alignment of grids after committing make some mistakes

--- a/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/control/DefaultStylesheet.css
+++ b/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/control/DefaultStylesheet.css
@@ -463,7 +463,6 @@
 
 .UIJCRExplorerPortlet .UIJCRExplorer .UIFormGrid .FieldLabel {
   width: 128px;
-  vertical-align: middle; 
 }
 
 .UIJCRExplorerPortlet .UIJCRExplorer .UIFormGrid .UIFormUploadInput .SelectFileFrame {
